[project]
name = "hello-python"
version = "0.1.0"
description = "A structured Python learning repository — basics to advanced"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "mypy==1.20.0",
    "ruff==0.15.10",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev"]

# ---------------------------------------------------------------------------
# Project scripts — installed as executables; run via: uv run <script>
# ---------------------------------------------------------------------------
[project.scripts]
install-hooks = "dev._scripts:install_hooks"
test          = "dev._scripts:test"
test-fast     = "dev._scripts:test_fast"
lint          = "dev._scripts:lint"
lint-fix      = "dev._scripts:lint_fix"
fmt           = "dev._scripts:fmt"
fmt-check     = "dev._scripts:fmt_check"
typecheck     = "dev._scripts:typecheck"
check         = "dev._scripts:check"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
# "." lets pytest import modules at repo root; "src" exposes the dev package.
pythonpath = [".", "src"]
# Limit discovery to content dirs — avoids accidentally picking up venv or build artefacts.
testpaths  = ["topics", "tests"]
addopts    = [
    "--tb=short",          # compact tracebacks — enough detail without drowning the terminal
    "--strict-markers",    # fail immediately if a test uses an unregistered marker (typo guard)
    "--doctest-modules",   # run >>> examples inside .py docstrings as tests
    "--cov=topics",        # measure coverage for learning topic modules
    "--cov=src",           # measure coverage for shared utilities
    "--cov=tests/utils",   # measure coverage for test helper utilities
    "--cov-report=term-missing",          # show uncovered line numbers in the terminal summary
    "--cov-report=html:coverage-report",  # generate a browsable HTML report in coverage-report/
]
# pytest-asyncio: automatically treat async test functions as asyncio coroutines —
# no need to decorate every async test with @pytest.mark.asyncio.
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks integration tests",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
# Measure all three source trees so the HTML report reflects the full picture.
source = ["topics", "src", "tests"]
omit   = [
    "*/test_*.py",              # test files themselves aren't "production" code to cover
    "*/conftest.py",            # pytest fixtures — not independently executable
    "*/dev/_scripts.py",        # dev CLI entry points; tested indirectly via uv run commands
    "*/__init__.py",            # package markers with no logic to measure
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",            # manual opt-out for unreachable/untestable branches
    "if __name__ == .__main__.:",  # script guard — only runs when executed directly
    "if TYPE_CHECKING:",           # imports used only for type annotations, stripped at runtime
    "\\.\\.\\.$$",                 # bare ellipsis — abstract method stubs with no body
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py314"  # enables checks for Python 3.14-specific syntax and builtins
line-length = 88           # matches black's default; keeps lines readable without being too narrow
src = ["src", "topics"]    # tells ruff which directories are first-party for import sorting

[tool.ruff.lint]
select = ["ALL"]  # opt-in to every rule; unused ones are explicitly ignored below
ignore = [
    # Conflicts with the formatter
    "COM812",
    "ISC001",

    # Docstring conventions — too strict for a learning repo
    "D",

    # Allow print() — essential for learning basics
    "T201",
    "T203",

    # Allow commented-out code — tutorials use it for examples
    "ERA001",

    # Allow TODO comments without author/issue links
    "FIX002",
    "TD002",
    "TD003",
    "TD004",

    # Type-checking import rules — too aggressive for a learning repo
    # (moving stdlib imports into TYPE_CHECKING blocks is fragile in Python 3.14)
    "TC",

    # Allow f-strings in logging for learning purposes
    "G004",

    # subprocess with trusted internal input is fine in _scripts.py
    "S603",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # use of assert — expected in tests
    "ANN",     # type annotations not required in test functions
    "PLR2004", # magic value comparison — parametrize values are fine
    "PT011",   # exception message matching too strict for type-focused tests
    "EM101",   # string literal in raise — tests frequently raise with inline messages for brevity
    "EM102",   # f-string literal in raise — same reason as EM101
    "TRY003",  # long exception messages outside class — fine in tests, no i18n requirement
    "TRY301",  # abstract raise to inner function — tests deliberately raise inline to show behaviour
    "PT012",   # pytest.raises() body must be simple — learning tests sometimes need try/except inside
    "PYI034",  # __enter__ return type — test helper classes don't need Self for correctness
    "BLE001",  # blind Exception catch — some tests intentionally demonstrate this antipattern
    "S110",    # try/except/pass — some tests intentionally demonstrate this antipattern
]
"**/conftest.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["dev"]              # treat dev as a first-party import for grouping
force-sort-within-sections = true        # sort all imports alphabetically within each group

[tool.ruff.format]
quote-style = "double"           # consistent with most Python style guides and black
indent-style = "space"           # spaces over tabs — Python community standard
docstring-code-format = true     # also format code blocks inside docstrings

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version  = "3.14"
mypy_path       = "src"   # lets mypy resolve `dev.*` imports without install
warn_return_any      = true  # flag implicit `Any` leaking out of return types
warn_unused_configs  = true  # catch stale per-module override sections
warn_unused_ignores  = true  # catch # type: ignore comments that are no longer needed
# Global defaults are intentionally lenient — most topics focus on concepts other
# than type annotations. Tighten per-module via overrides as topics mature.
# Add `disallow_untyped_defs = true` to a module's override to go stricter.

[[tool.mypy.overrides]]
# topics/type_hints/ is the dedicated learning topic for Python type annotations —
# strict mode here ensures the examples themselves are fully and correctly typed.
module = ["topics.type_hints.*"]
strict = true

[[tool.mypy.overrides]]
# Test functions in other topics intentionally omit annotations to stay concise
# and keep the focus on the concept under test, not on type syntax.
# The five flags below counter strict-mode settings that leak globally when
# `strict = true` is set in the topics.type_hints.* override above — mypy
# applies those flags as new global defaults, so we explicitly reset each
# one here to keep non-type-hints tests lenient.
module = ["topics.*.tests.*", "topics.*.*.tests.*"]  # two patterns: one for flat topics, one for nested sub-topics (e.g. collections.builtins.tests.*)
disallow_untyped_defs        = false  # inner helper / decorator functions intentionally lack annotations
disallow_incomplete_defs     = false  # factory functions (e.g. `def repeat(n: int):`) may omit return type
disallow_untyped_decorators  = false  # decorators under test are intentionally untyped — that IS the lesson
disallow_untyped_calls       = false  # calling untyped helpers inside typed tests is intentional
disallow_any_generics        = false  # bare generics (list, dict) are fine in non-type-hints tests
warn_return_any              = false  # wrappers that forward `func(*args)` legitimately return Any
